fixed header size on mobile

--- a/css/signature.css
+++ b/css/signature.css
@@ -55,8 +55,8 @@ nav ul {
   background-image: url(../images/app-api-cta-bg-img.jpg);
   background-repeat: no-repeat;
   background-position: center left;
-  opacity: 0.2;
-  filter: blur(2.5px);
+  opacity: 0.3;
+  filter: blur(3px);
   border-bottom-right-radius: 20px;
   z-index: -1;
 }
@@ -371,9 +371,23 @@ main {
   margin: 0 !important;
 }
 
+@media only screen and (max-device-width: 480px) {
+  .container {
+    padding: 5% !important;
+  }
+}
+
 @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) {
+  .green-container .container {
+    padding: 3% !important;
+  }
+
   .img-fluid {
     max-width: 50% !important;
+  }
+
+  main {
+    margin-top: 16em;
   }
 
   .overviews-box {
